First version which includes the setup of a SolrCore based on a configuration folder.

--- a/src/main/resources/com/fyr/talend/components/output/Messages.properties
+++ b/src/main/resources/com/fyr/talend/components/output/Messages.properties
@@ -4,4 +4,5 @@ Search.solrIndexOptimizer._displayName=solrIndexOptimizer
 Search.solrIndexer._displayName=solrIndexer
 SolrIndexerOutputConfiguration.appendIndex._displayName=appendIndex
 SolrIndexerOutputConfiguration.indexPath._displayName=indexPath
-SolrIndexerOutputConfiguration.schemaPath._displayName=schemaPath
+SolrIndexerOutputConfiguration.solrCoreName._displayName=solrCoreName
+SolrIndexerOutputConfiguration.solrHomePath._displayName=solrHomePath
