First version of SolrIndexOptimizer

--- a/src/main/resources/com/fyr/talend/components/output/Messages.properties
+++ b/src/main/resources/com/fyr/talend/components/output/Messages.properties
@@ -2,7 +2,13 @@
 # You can also translate your configuration by adding one file by local Messages_fr.properties for french for example
 Search.solrIndexOptimizer._displayName=solrIndexOptimizer
 Search.solrIndexer._displayName=solrIndexer
+
 SolrIndexerOutputConfiguration.appendIndex._displayName=appendIndex
-SolrIndexerOutputConfiguration.indexPath._displayName=indexPath
 SolrIndexerOutputConfiguration.solrCoreName._displayName=solrCoreName
 SolrIndexerOutputConfiguration.solrHomePath._displayName=solrHomePath
+
+SolrIndexOptimizerOutputConfiguration.appendIndex._displayName=appendIndex
+SolrIndexOptimizerOutputConfiguration.solrCoreName._displayName=solrCoreName
+SolrIndexOptimizerOutputConfiguration.solrHomePath._displayName=solrHomePath
+SolrIndexOptimizerOutputConfiguration.maxNumberOfSegments._displayName=maxNumberOfSegments
+SolrIndexOptimizerOutputConfiguration.expungeDeletes._displayName=expungeDeletes
