--- a/src/main/resources/com/fyr/talend/components/output/Messages.properties
+++ b/src/main/resources/com/fyr/talend/components/output/Messages.properties
@@ -1,7 +1,7 @@
 # Here you can change all your configuration display names to use more explicit labels
 # You can also translate your configuration by adding one file by local Messages_fr.properties for french for example
-Search.solrIndexOptimizer._displayName=SolrIndexOptimizer
-Search.solrIndexer._displayName=SolrIndexer
+Solr.SolrIndexOptimizer._displayName=SolrIndexOptimizer
+Solr.SolrIndexer._displayName=SolrIndexer
 
 SolrIndexerOutputConfiguration.appendIndex._displayName=appendIndex
 SolrIndexerOutputConfiguration.solrCoreName._displayName=solrCoreName
