--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,35 @@
-= SolrTools Talend
+= SolrIndexTools for Talend
+
+This repository includes components with Solr index functionalties for usage within Talend Studio for Data Integration.
+
+The main intention of these components is to provide batch processing for generating index files and to streamling  different input channels into a pre-processed index.
+
+== Overview of Components
+
+* *SolrIndexer* - This component indexes documents coming from a generic row input into a Solr index. The generic row index must comply with the schema associated with the Solr index.
+** *Param:* _solrHomePath_ - Path to solrHome. The home directory is the directory where the complete configuration is located (See also example configuration as reference).
+** *Param:* _solrCoreName_ - SolrCore name.
+** *Param:* _appendIndex_ - Indicates if an existing index shall be deleted or if the index shall be appended.
+* *SolrIndexOptimizer* - This component allows to optimize the index and to selectively reduce the amount of segments and removal of deleted documents.
+** *Param:* _solrHomePath_ - Path to solrHome. The home directory is the directory where the complete configuration is located (See also example configuration as reference).
+** *Param:* _solrCoreName_ - SolrCore name.
+** *Param:* _appendIndex_ - Indicates if an existing index shall be deleted or if the index shall be appended.
+** *Param:* _maxNumberOfSegments_ - The amount of segments to optimize to.
+** *Param:* _expungeDeletes_ - Controls if deleted documents are removed from the index while optimizing.
+
+== Installing Components in Talend Studio
+
+The components can be installed by cloning the repository and running maven (See: https://maven.apache.org for download).
+
+Maven command line command:
+----
+mvn package talend-component:deploy-in-studio -Dtalend.component.studioHome=<Studio Directory>
+----
+
+== Sample Configuration
+
+A sample configuration is provided as ZIP file within the repository see in folder:
+
+----
+src/main/resources/example_config/config.zip
+----
