Adding travis build image to asciidoc

--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 = SolrIndexTools for Talend
 
+image:https://travis-ci.org/fyrz/fSolrTools.svg?branch=master["Build Status", link="https://travis-ci.org/fyrz/fSolrTools"]
+
 This repository includes components with Solr index functionalties for usage within Talend Studio for Data Integration.
 
 The main intention of these components is to provide batch processing for generating index files and to streamling  different input channels into a pre-processed index.
