Added new SolrJIndexer Component to Toolbox.

--- a/src/main/resources/com/fyr/talend/components/output/Messages.properties
+++ b/src/main/resources/com/fyr/talend/components/output/Messages.properties
@@ -2,6 +2,7 @@
 # You can also translate your configuration by adding one file by local Messages_fr.properties for french for example
 Solr.IndexOptimizer._displayName=IndexOptimizer
 Solr.Indexer._displayName=Indexer
+Solr.JIndexer._displayName=SolrJIndexer
 
 SolrIndexerOutputConfiguration.appendIndex._displayName=appendIndex
 SolrIndexerOutputConfiguration.solrCoreName._displayName=solrCoreName
@@ -12,3 +13,13 @@ SolrIndexOptimizerOutputConfiguration.solrCoreName._displayName=solrCoreName
 SolrIndexOptimizerOutputConfiguration.solrHomePath._displayName=solrHomePath
 SolrIndexOptimizerOutputConfiguration.maxNumberOfSegments._displayName=maxNumberOfSegments
 SolrIndexOptimizerOutputConfiguration.expungeDeletes._displayName=expungeDeletes
+SolrJIndexer.solrURL._displayName=solrURL
+SolrJIndexer.clientMode._displayName=clientMode
+SolrJIndexer.connectionTimeout._displayName=connectionTimeout
+SolrJIndexer.socketTimeout._displayName=socketTimeout
+SolrJIndexer.alwaysStreamDeletes._displayName=alwaysStreamDeletes - Concurrent Only
+SolrJIndexer.queueSize._displayName=queueSize - Concurrent Only
+SolrJIndexer.threadCount._displayName=threadCount - Concurrent Only
+SolrJToolsClientMode.SIMPLE._displayName=Simple
+SolrJToolsClientMode.CONCURRENT._displayName=Concurrent
+
